--- a/templates/base.html
+++ b/templates/base.html
@@ -160,6 +160,14 @@
           {% set custom_sidebar = get_section(path="sidebar/_index"~file_lang_path~".md") %} 
             {{ custom_sidebar.content | safe }}
 
+          <h2>{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+          <ul class="list-none text-sm">
+          {% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") -%}
+          {% for page in all_blog_pages.pages | slice(start=0,end=10)  %} 
+            {{ macro::post_side(page=page) }}
+          {% endfor %} 
+          </ul>
+
           <h2 ><a class="no-underline" href="{{lang_prefix_path}}tags/">{{ trans(key="label_tags",lang=lang) }}</a></h2>
           <ul class="list-none text-sm">
             {% set tags = get_taxonomy(kind="tags",lang=lang) %} {% for tag in tags.items -%}
