--- a/templates/macros.html
+++ b/templates/macros.html
@@ -40,6 +40,10 @@
 <a href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">Updated on {{ page.updated }}</span>
 {% endmacro post_min %}
 
+{% macro post_side(page) %}
+<a href="{{ page.permalink }}">{{ page.title }}</a><br>
+{% endmacro post_side %}
+
 {% macro page_toc(toc)%}
 <section class="sidebar-table-content">
   <ul >
