--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -88,13 +88,27 @@ body {
   margin-right: auto;
   max-width: 120rem;
 }
-h1,
-h2,
-h3 {
-  padding-top: 2.4rem;
-  padding-bottom: 1.2rem;
+h1 {
+  padding-top: 1.0rem;
+  padding-bottom: 0.2rem;
   margin-bottom: 0.2rem;
-  line-height: 1.0;
+  line-height: 1.6;
+  font-weight: 500;
+  position: relative;
+}
+h2 {
+  padding-top: 1.4rem;
+  padding-bottom: 0.4rem;
+  margin-bottom: 0.2rem;
+  line-height: 1.6;
+  font-weight: 500;
+  position: relative;
+}
+h3 {
+  padding-top: 1.4rem;
+  padding-bottom: 0.4rem;
+  margin-bottom: 0.2rem;
+  line-height: 1.6;
   font-weight: 500;
   position: relative;
 }
@@ -215,7 +229,10 @@ a:hover {
   text-decoration: underline;
 }
 
-.muted,
+.muted {
+  padding-bottom: 1.5rem;
+  color: #b3b3b1;
+}
 a.muted,
 .muted:link,
 .muted:visited {
@@ -287,8 +304,8 @@ a.muted,
   padding-right: 1.4rem;
 }
 .pt {
-  padding-top: 0rem;
-  padding-bottom: 0.2rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 .pl {
   padding-left: 1.4rem;
@@ -331,6 +348,7 @@ li.inline {
 .sidebar ul {
   margin-top: 0;
   padding-left: 1rem;
+  list-style: none;
 }
 .sidebar li {
   font-size: 1rem;
