--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,12 +1,12 @@
 {% macro post_max(page) %}
 <article>
-  <h1 class="no-border pb-sm"><a class="no-underline " href="{{ page.permalink }}">{{ page.title }}</a></h1>
-  <section class="muted pt">
+  <h1 style="font-size:2rem;"><a class="no-underline " href="{{ page.permalink }}">{{ page.title }}</a></h1>
+  <section class="muted">
     <time pubdate>{{ page.date | date(format="%Y-%m-%d") }}</time>
-    {% if page.taxonomies.categories %} |
-    <span>{{trans(key="label_published_on",lang=lang)}} </span>
+    {% if page.taxonomies.categories %}
+    <span>｜&emsp;{{trans(key="label_published_on",lang=lang)}}</span>
     <a class="no-underline" href="{{ get_taxonomy_url(kind="categories",lang=lang, name=page.taxonomies.categories[0]) }}">
-      {{ page.taxonomies.categories[0] }}
+    {{ page.taxonomies.categories[0] }}
     </a> 
   {% endif %}
     </section>
@@ -16,6 +16,11 @@
   {% elif page.description -%}
   <p>{{ page.description }}</p>
   {% endif -%}
+  <div class="muted">
+    <section>
+      <a class="text text-color" href="{{ page.permalink }}#continue-reading"><span>{{ trans(key="label_read_more",lang=lang) }} </span></a>
+    </section>
+  </div>  
   {% if page.taxonomies.tags %}
   <p>
     {% for tag in page.taxonomies.tags %}
@@ -25,11 +30,6 @@
   </p>
  
   {% endif %}
-  <div class="muted">
-    <section>
-      <a class="text text-color" href="{{ page.permalink }}#continue-reading"><span>{{ trans(key="label_read_more",lang=lang) }} </span></a>
-    </section>
-  </div>  
    <br>
   <hr class="w-full">
 </article>
