--- a/templates/macros.html
+++ b/templates/macros.html
@@ -37,7 +37,7 @@
 
 
 {% macro post_min(page) %}
-<a href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">Updated on {{ page.updated }}</span>
+<a href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">{{ page.updated }}</span>
 {% endmacro post_min %}
 
 {% macro post_side(page) %}
