--- a/templates/base.html
+++ b/templates/base.html
@@ -113,17 +113,14 @@
       content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}"
     />
     {% endif %} {% if config.extra.google_analytics %}
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id={{config.extra.google_analytics}}"
-    ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{config.extra.google_analytics}}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "{{config.extra.google_analytics}}");
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '{{config.extra.google_analytics}}');
     </script>
     {% endif %}
     {% block post_meta %}{% endblock post_meta %}
