--- a/templates/base.html
+++ b/templates/base.html
@@ -114,13 +114,13 @@
     />
     {% endif %} {% if config.extra.google_analytics %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{config.extra.google_analytics}}"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JM526KJ2E1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', '{{config.extra.google_analytics}}');
+      gtag('config', 'G-JM526KJ2E1');
     </script>
     {% endif %}
     {% block post_meta %}{% endblock post_meta %}
