--- a/templates/page.html
+++ b/templates/page.html
@@ -69,7 +69,7 @@
             </p>
             {% else %}
             <p>
-              如果你對於本文有任何想討論或分享的，歡迎<a href="mailto:mimir@hey.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>mimir@hey.com</code> 找我聊聊！
+              如果你對於<a href="https://pinchlime.com">本站</a>或本文有任何想討論或分享的，歡迎<a href="mailto:mimir@hey.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>mimir@hey.com</code> 找我聊聊！
             </p>
             {% endif %}
             
