--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,32 +1,26 @@
 {% extends "base.html" %} 
-{% set all_section_pages =
-get_section(path="_index.md") %}
-{% block title %}{{ config.title}} - Archive{%
-endblock title %} 
+{% set all_section_pages = get_section(path="_index.md") %}
+{% block title %}{{ config.title}} - Archive{% endblock title %} 
 
-{% block ogtitle %}{{ config.title}} - Archive {% endblock
-ogtitle %} 
+{% block ogtitle %}{{ config.title}} - Archive {% endblock ogtitle %} 
 
 {% block ogdesc %}Archive Articles{% endblock ogdesc %} 
 
-{% block
-ogurl %}{% if page.slug %}{{ config.base_url }}/{{ page.slug }}{% endif %}
+{% block ogurl %}{% if page.slug %}{{ config.base_url }}/{{ page.slug }}{% endif %}
 
 {% endblock ogurl %} 
 
-{% block ogimg %}{% if page.extra.image %}{{ page.extra.image
-}}{% endif %}{% endblock ogimg %} 
+{% block ogimg %}{% if page.extra.image %}{{ page.extra.image }}{% endif %}{% endblock ogimg %} 
 
 {% block main %} 
 <div class="main-box-block">
 
-{% for year, posts in
-all_section_pages.pages | group_by(attribute="year") %}
+{% for year, posts in all_section_pages.pages | group_by(attribute="year") %}
 <h2>{{ year }}</h2>
 
-<ul>
+<ul class="list-none">
   {% for post in posts %}
-  <li>{{ macro::post_min(page=post) }}</a></li>
+  <li>{{ macro::post_min(page=post) }}</li>
   {% endfor %}
 </ul>
 {% endfor %} 
