--- a/templates/macros.html
+++ b/templates/macros.html
@@ -37,12 +37,16 @@
 
 
 {% macro post_min(page) %}
-<a href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">{{ page.updated }}</span>
+<a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">{{ page.updated }}</span>
 {% endmacro post_min %}
 
 {% macro post_side(page) %}
 <a href="{{ page.permalink }}">{{ page.title }}</a><br>
 {% endmacro post_side %}
+
+{% macro newsletters_side(page) %}
+<span>＃{{page.extra.issues }} </span><a href="{{ page.permalink }}">{{ page.title }}</a><br>
+{% endmacro newsletters_side %}
 
 {% macro page_toc(toc)%}
 <section class="sidebar-table-content">
