--- a/templates/newsletter_page.html
+++ b/templates/newsletter_page.html
@@ -1,3 +1,14 @@
 {% extends "page.html" %} {% block detail_meta_slot -%}
 <span>第 {{page.extra.issues }} 期 ｜</span>
 {% endblock detail_meta_slot -%}
+{% block newsletter_sidebar_slot %}
+<h2>看其他<span style="text-decoration:underline;"><a href="/newsletters/">電子報</a></span></h2>
+<ul>
+  {% set all_blog_pages = get_section(path="newsletters/_index"~file_lang_path~".md") -%}
+  {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
+  <li>
+    {{ macro::newsletters_side(page=page) }}
+  </li>
+  {% endfor %} 
+</ul>
+{% endblock newsletter_sidebar_slot %}
