--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
     <link rel="stylesheet" href="{{ get_url(path="site/styles/site.css",
     trailing_slash=false,cachebust=true) | safe }}">
@@ -77,10 +74,7 @@
     type="image/png" sizes="16x16" href="{{
     get_url(path="site/images/favicon-16x16.png",cachebust=true) }}"> <link rel="manifest"
     href="{{ get_url(path="site/images/manifest.json") }}">
-    <meta
-      name="msapplication-TileColor"
-      content="{{ config.extra.theme_color }}"
-    />
+    <meta name="msapplication-TileColor" content="{{ config.extra.theme_color }}" />
     <meta name="msapplication-TileImage" content="{{
     get_url(path="site/images/ms-icon-144x144.png",cachebust=true) }}">
     <meta name="theme-color" content="{{ config.extra.theme_color }}" />
@@ -99,10 +93,9 @@
     />
     <meta property="og:site_name" content="{{ config.title }}" />
     {% if config.extra.image %}
-    <meta
-      property="og:image"
-      content="{% block ogimg %}{{ config.extra.image | safe }}{% endblock ogimg %}"
-    />
+    <meta property="og:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-pinchlime-logo_Huhf2P.png" />
+    <meta property="og:image:width" content="600"/>
+    <meta property="og:image:height" content="600"/>
     {% endif %}
     <meta name="twitter:card" content="summary" />
     {% if config.extra.twitter_user %}
