--- a/templates/base.html
+++ b/templates/base.html
@@ -101,6 +101,7 @@
     {% if config.extra.twitter_user %}
     <meta name="twitter:site" content="{{ config.extra.twitter_user }}" />
     <meta name="twitter:creator" content="{{ config.extra.twitter_user }}" />
+    <meta name="twitter:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-pinchlime-logo_Huhf2P.png" />
     <meta
       name="twitter:image:alt"
       content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}"
