--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
     />
     <meta property="og:site_name" content="{{ config.title }}" />
     {% if config.extra.image %}
-    <meta property="og:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-pinchlime-logo_Huhf2P.png" />
+    <meta property="og:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-1200-630_n3S1PT.png" />
     <meta property="og:image:width" content="600"/>
     <meta property="og:image:height" content="600"/>
     {% endif %}
