--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,7 @@
       content="{% block ogurl %}{{ config.base_url~lang_prefix_path | safe }}{% endblock ogurl%}"
     />
     <meta property="og:site_name" content="{{ config.title }}" />
+    <meta property="og:type" content="website" />
     {% if config.extra.image %}
     <meta property="og:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-1200-630_n3S1PT.png" />
     <meta property="og:image:width" content="600"/>
