新增了電子報專屬的歸檔頁面，把原先的所有文章歸檔限定在只有部落格文章。

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -40,6 +40,10 @@
 <a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">{{ page.updated }}</span>
 {% endmacro post_min %}
 
+{% macro newsletters_min(page) %}
+<span>＃{{page.extra.issues }} </span><a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> <span class="muted text-sm">{{ page.updated }}</span>
+{% endmacro post_min %}
+
 {% macro post_side(page) %}
 <a href="{{ page.permalink }}">{{ page.title }}</a><br>
 {% endmacro post_side %}
