--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -16,7 +16,7 @@
 {% block ogtitle %}{{ page.title }} - {{ config.title}}{% endblock ogtitle %}
 {% block ogdesc %}{% if page.description %} {{ page.description }} {% elif page.summary%} {{page.summary | spaceless | striptags}}  {% endif %}{% endblock ogdesc %}
 {% block description %}{% if page.description %} {{ page.description }} {% elif page.summary%} {{page.summary | spaceless | striptags}}  {% endif %}{% endblock description %}
-{% block ogurl %}{% if page.slug %}{{ config.base_url }}/{{ page.slug }}{% endif %}{% endblock ogurl %}
+{% block ogurl %}{% if page.path %}{{ config.base_url }}/{{ page.path }} {% endif %}{% endblock ogurl %}
 {% block ogimg %}{% if page.extra.image %}{{ page.extra.image }}{% endif %}{% endblock ogimg %}
 
 {% block main %}
