修復了站內每個頁面的 og:url, og:title & og:descriptoon

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %} 
-{% block title %}{{ config.title }} - 404{% endblock
-title %}
+{% block title %}{{ config.title }} - 404{% endblock title %}
 {% block main %}
 
 <div class="alert alert-error navmargin">
