--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% block title %}{{ config.title }} - {{
-trans(key="label_categories",lang=lang) }}{% endblock title %} {% block main %}
+{% extends "base.html" %}  
+{% block title %}{{taxonomy.name}}: {{term.name}} -  {{ config.title }}{% endblock title %}
+{% block ogtitle %}{{taxonomy.name}}: {{term.name}} -  {{ config.title }}{% endblock ogtitle %}
+{% block description %}All posts in {{term.name}}{% endblock description %}
+{% block ogdesc %}All posts in {{term.name}}{% endblock ogdesc %}
+{% block ogurl %}{{get_taxonomy_url(kind=taxonomy.name,lang=lang, name=term.name)}}{% endblock ogurl %}
+{% block main %}
 <div class="main-box-block">
 
   <header id="overview">
