--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,14 +1,9 @@
 {% extends "base.html" %} 
-{% block title %}{{ config.title}} - Archive{% endblock title %} 
-
-{% block ogtitle %}{{ config.title}} - Archive {% endblock ogtitle %} 
-
-{% block ogdesc %}Archive Articles{% endblock ogdesc %} 
-
-{% block ogurl %}{% if page.path %}{{ config.base_url }}/{{ page.path }} {% endif %}{% endblock ogurl %}
-
-{% block ogimg %}{% if page.extra.image %}{{ page.extra.image }}{% endif %}{% endblock ogimg %} 
-
+{% block title %}{{ config.title }} - {{ section.title }}{% endblock title %}
+{% block ogtitle %}{{ config.title }} - {{ section.title }}{% endblock ogtitle %}
+{% block description %}{{ section.title }}{% endblock description %}
+{% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
+{% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 {% block main %} 
 <div class="main-box-block">
 {% set all_blog_pages = get_section(path="blog/_index.md") %}
