--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -1,5 +1,10 @@
-{% extends "base.html" %} {% block title %}{{ config.title }} - {{
-trans(key="label_categories",lang=lang) }}{% endblock title %} {% block main %}
+{% extends "base.html" %} 
+{% block title %}{{ config.title }} - All {{ taxonomy.name }}{% endblock title %} 
+{% block ogtitle %}{{ config.title }} - All {{ taxonomy.name }}{% endblock ogtitle %}
+{% block description %}All {{ taxonomy.name }}{% endblock description %}
+{% block ogdesc %}All {{ taxonomy.name }}{% endblock ogdesc %}
+{% block ogurl %}{{ config.base_url }}/{{ taxonomy.name }}{% endblock ogurl %}
+{% block main %}
 <div class="main-box-block">
   <div class="page-header">
     <h1>All {{ taxonomy.name }}</h1>
