--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -17,18 +17,16 @@
       </div>
   </header>
   <section>
-    {% if paginator %} 
     <div class="page-header">
       <h1> {{ term.name }} </h1>
     </div>
     <ul class="root-ul">
-      {% for page in paginator.pages %} 
+      {% for page in term.pages %} 
       <li>
         {{ macro::post_min(page=page) }}
       </li>
       {% endfor %} 
     </ul>
-    {% endif %}
   </section>
 </div>
 {% endblock main %}
