在 sections 的頁面增加了 canonical 的設定

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
     {% if config.generate_rss %} <link rel="alternate"
     type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml") }}">
     {% endif %}
+    {% block canonical_url %}{% endblock canonical_url %}
     <meta
       name="description"
       itemprop="about"
