--- a/templates/shortcodes/ftnt.html
+++ b/templates/shortcodes/ftnt.html
@@ -1,5 +1,5 @@
 {%- set idx_str = idx | as_str -%}
-<p id="ftnt:{{- idx_str -}}"><sup>[{{- idx_str -}}]</sup>&nbsp;{{- body | markdown( inline = true ) | safe -}}
+<p class="footnote-muted" id="ftnt:{{- idx_str -}}"><sup>[{{- idx_str -}}]</sup>&nbsp;{{- body | markdown( inline = true ) | safe -}}
 {%- if not no_back_ref -%}
 &nbsp;<a href="#ftntref:{{- idx_str -}}">&#8617;&#65038;</a>
 {%- endif -%}
