--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -44,7 +44,13 @@ select {
   box-sizing: inherit;
 }
 
-img,
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  height: auto;
+}
 video {
   height: auto;
   max-width: 100%;
