test lazy loading

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
       <section >
         <a href="/">
-          <img src="logo.png"alt="The logo of Pinchlime"width="180"height="180"style="display:block; margin:auto;">
+          <img loding="lazy" src="logo.png"alt="The logo of Pinchlime"width="180"height="180"style="display:block; margin:auto;">
         </a>
       </section>
       {{ section.content | safe }}
