--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -72,7 +72,7 @@ th {
 /* --reset end -- */
 
 html {
-  font-size: 16px;
+  font-size: 15px;
   box-sizing: border-box;
   --colors-text: rgba(0, 0, 0, 0.8);
   --colors-muted: #b3b3b1;
@@ -93,6 +93,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 120rem;
+  padding-top: 60px;
 }
 h1 {
   padding-top: 1.0rem;
@@ -206,7 +207,7 @@ a:link,
 a:visited {
   -webkit-transition: color 200ms ease;
   transition: color 200ms ease;
-  text-decoration: underline;
+  text-decoration: none;
   color: inherit;
   text-decoration-thickness: 0.1rem;
 }
@@ -327,7 +328,37 @@ a.muted,
 .pl {
   padding-left: 1.4rem;
 }
-
+.nvabar-name {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 24px;
+  padding-left: 8px;
+  position: relative;
+  top: -1.5px;
+  vertical-align: middle;
+  color: #5f6368;
+  white-space: nowrap;
+}
+.navbar-a {
+  display: flex;
+  align-items: center;
+  color: #003c6d;
+  text-decoration: none;
+  padding-left: 12px;
+}
+.navbar-top {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  height: 52px;
+  width: calc(100% - 16px);
+  padding: 1rem;
+  align-items: center;
+  border-bottom: 3px solid #e9edf0;
+  color: #5f6368;
+  z-index: 1100;
+  background-color: #f2f2f2;
+}
 article {
   padding-bottom: 0.2rem;
 }
@@ -394,7 +425,7 @@ li.inline {
   .sidebar {
     position: sticky;
     border-top: none;
-    top: 0;
+    top: 60px;
     z-index: 1;
     height: 100vh;
     overflow-y: auto;
