--- a/templates/base.html
+++ b/templates/base.html
@@ -132,8 +132,8 @@
     <section id="root" >
       {% block body_zone -%}
       <main class="body-zone flex justify-between flex-1">
-          <section class="main flex-1">
-            <div class="main-inner px">
+          <section class="main flex-1 py">
+            <div class="main-inner">
               {% block main %}
               {% endblock main %}
 
