--- a/templates/page.html
+++ b/templates/page.html
@@ -3,9 +3,9 @@
 <meta name="title" content="{{ page.title }}">
 <style>
   .sidebar{
-    display: none;
+    display: block;
   }
-  @media (min-width: 67.5rem) {
+  @media (min-width: 52rem) {
     .sidebar{
       display: block;
     }
