updated some codes

--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -21,7 +21,7 @@
       <h1> {{ term.name }} </h1>
     </div>
     <ul class="root-ul">
-      {% for page in term.pages %} 
+      {% for page in term.pages | sort(attribute="date") | reverse %} 
       <li>
         {{ macro::post_min(page=page) }}
       </li>
