--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -5,7 +5,7 @@
 {% block ogdesc %}All {{ taxonomy.name }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}/{{ taxonomy.name }}{% endblock ogurl %}
 {% block main %}
-<div class="main-box-block">
+<div class="element">
 
   <header id="overview">
     <div class="pt">
