--- a/templates/tag_list.html
+++ b/templates/tag_list.html
@@ -6,7 +6,7 @@
 {% block ogurl %}{% if page.path %}{{ config.base_url }}{{ page.path }} {% endif %}{% endblock ogurl %}
 {% block main %}
 
-<div class="main-box-block">
+<div class="element">
   <div class="page-header">
     <h1>所有標籤</h1>
     <p>這邊先簡單依照字母排序各個標籤，之後再來嘗試其他的排版與呈現方式。</p>
