--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -5,7 +5,7 @@
 {% block ogdesc %}All posts in {{term.name}}{% endblock ogdesc %}
 {% block ogurl %}{{get_taxonomy_url(kind=taxonomy.name,lang=lang, name=term.name)}}{% endblock ogurl %}
 {% block main %}
-<div class="main-box-block">
+<div class="element">
 
   <header id="overview">
     <div class="pt">
