--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
     <meta property="og:image:width" content="600"/>
     <meta property="og:image:height" content="600"/>
     {% endif %}
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     {% if config.extra.twitter_user %}
     <meta name="twitter:site" content="{{ config.extra.twitter_user }}" />
     <meta name="twitter:creator" content="{{ config.extra.twitter_user }}" />
